--- a/.env
+++ b/.env
@@ -1,4 +1,7 @@
 DB = mongodb+srv://dbUser:dbUserPassword@cluster0.fuom9e0.mongodb.net/nowadvert?retryWrites=true&w=majority
 
-JWTPRIVATEKEY=lqjkgbqgneqkghogewgqoh156kjn
+JWTPRIVATEKEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpYXQiOjE2NjczMDQzMjksImV4cCI6MTY2NzM5MDcyOX0.YoPX6aOHkXSKAXtYNtoTlkINMK9Jw7q6mk5146xfHlo
 PORT = 3001
+
+AUTH_EMAIL=mackdaniel06@gmail.com
+AUTH_PASSWORD=highandlow
