--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
@@ -15,10 +15,14 @@
     "crypto": "^1.0.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
+    "helmet": "^6.0.0",
     "joi": "^17.6.2",
     "joi-password-complexity": "^5.1.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.4",
+    "morgan": "^1.10.0",
+    "nodemailer": "^6.8.0",
+    "otp-generator": "^4.0.0",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
